added 4 new tasks

--- a/todo.txt
+++ b/todo.txt
@@ -7,3 +7,7 @@ MY TO-DO LIST
 5. Visit aunt.
 6. Apply for remote jobs.
 7. Practice Code
+8. Complete Internship Task
+9. Practive Chess Openings
+10. Solve Chess Puzzles 
+11. Check Exam Schedule
